[package]
name = "proc_alarm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
flagset = { version = "0.4.5", features = ["serde"] }
iced = { version = "0.12.1", features = ["async-std", "canvas"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sysinfo = "0.30.7"
time = { version = "0.3.34", features = ["serde-human-readable"] }
